<resources>

    <!-- App strings for translation -->
    <string name="title_request_no1">Φαρμακείο - Ιατρείο</string>
    <string name="title_request_no2">Κατάστημα προμήθειας αγαθών</string>
    <string name="title_request_no3">Τράπεζα</string>
    <string name="title_request_no4">Παροχή βοήθειας</string>
    <string name="title_request_no5">Τελετή - Γονείς σε διάσταση</string>
    <string name="title_request_no6">Άθληση - Ανάγκες κατοικίδιου</string>

    <string name="summary_request_no1">Μετάβαση σε φαρμακείο ή επίσκεψη στον γιατρό, εφόσον αυτό συνιστάται μετά από σχετική επικοινωνία.</string>
    <string name="summary_request_no2">Μετάβαση σε εν λειτουργία κατάστημα προμηθειών αγαθών πρώτης ανάγκης (σούπερ μάρκετ, μίνι μάρκετ), όπου δεν είναι δυνατή η αποστολή τους.</string>
    <string name="summary_request_no3">Μετάβαση στην τράπεζα, στο μέτρο που δεν είναι δυνατή η ηλεκτρονική συναλλαγή.</string>
    <string name="summary_request_no4">Κίνηση για παροχή βοήθειας σε ανθρώπους που βρίσκονται σε ανάγκη ή συνοδεία ανηλίκων μαθητών από/προς το σχολείο.</string>
    <string name="summary_request_no5">Μετάβαση σε τελετή κηδείας υπό τους όρους που προβλέπει ο νόμος ή μετάβαση διαζευγμένων γονέων ή γονέων που τελούν σε διάσταση που είναι αναγκαία για τη διασφάλιση της επικοινωνίας γονέων και τέκνων, σύμφωνα με τις κείμενες διατάξεις.</string>
    <string name="summary_request_no6">Σωματική άσκηση σε εξωτερικό χώρο ή κίνηση με κατοικίδιο ζώο, ατομικά ή ανά δύο άτομα, τηρώντας στην τελευταία αυτή περίπτωση την αναγκαία απόσταση 1,5 μέτρου.</string>

    <string name="app_name">HardaliApp</string>
    <string name="r1">Μετάβαση σε φαρμακείο ή επίσκεψη στον γιατρό ή αιμοδοσία, εφόσον αυτό συνιστάται μετά από σχετική επικοινωνία.</string>
    <string name="r2">Μετάβαση σε εν λειτουργία κατάστημα προμηθειών αγαθών πρώτης ανάγκης (σούπερ μάρκετ, μίνι μάρκετ), όπου δεν είναι δυνατή η αποστολή τους.</string>
    <string name="r3">Μετάβαση σε δημόσια υπηρεσία ή τράπεζα, στο μέτρο που δεν είναι δυνατή η ηλεκτρονική συναλλαγή.</string>
    <string name="r4">Κίνηση για παροχή βοήθειας σε ανθρώπους που βρίσκονται σε ανάγκη ή συνοδεία ανηλίκων μαθητών από/προς το σχολείο.</string>
    <string name="r5">Μετάβαση σε τελετή κηδείας υπό τους όρους που προβλέπει ο νόμος ή μετάβαση διαζευγμένων γονέων ή γονέων που τελούν σε διάσταση που είναι αναγκαία για τη διασφάλιση της επικοινωνίας γονέων και τέκνων, σύμφωνα με τις κείμενες διατάξεις.</string>
    <string name="r6">Σωματική άσκηση σε εξωτερικό χώρο ή κίνηση με κατοικίδιο ζώο, ατομικά ή ανά τρία άτομα, τηρώντας στην τελευταία αυτή περίπτωση την αναγκαία απόσταση 1,5 μέτρου.</string>
    <string name="sms_13033_pattern">Χ Όνομα Επώνυμο Διεύθυνση Αριθμός</string>
    <string name="sms_confirm_title">Επιβεβαίωση Μηνύματος</string>
    <string name="sms_confirm_text">Επιβεβαιώστε εαν το δωρεάν μήνυμα που θέλετε να στείλετε στο 13033 είναι το ακόλουθο:</string>
    <string name="sms_confirm_send">Αποστολή</string>
    <string name="view_edited_message_item_id">Id</string>
    <string name="view_edited_message_item_title">Title</string>
    <string name="view_edited_message_item_data">data</string>
    <string name="view_edited_message_item_send">Αποστολή</string>
    <string name="sms_reason_info_title">Title</string>
    <string name="sms_reason_info_title2">Περισσότερς Πληροφορίες Επιλογής Μηνύματος</string>
    <string name="sms_reason_info_message_to_show">Message to show</string>
    <string name="sms_reason_info_ok">Εντάξει</string>
    <string name="activity_user_profile_intro">Δείτε τα προσωπικά σας στοιχεία και επεξεργαστείτε τα πατώντας την αντίστοιχη ένδειξη στο πάνω δεξιά μέρος της εφαρμογής!</string>
    <string name="activity_user_profile_updatebtn">Ενημέρωση</string>
    <string name="activity_user_profile_fullname">Ονοματεπώνυμο</string>
    <string name="activity_user_profile_email">Διεύθυνση Email</string>
    <string name="activity_user_profile_address">Διεύθυνση Κατοικίας</string>
    <string name="activity_user_profile_changepassword_intro">Θέλετε να αλλάξετε τον κωδικό σας;</string>
    <string name="activity_user_profile_changepassword_intentbtn">Αλλαγή Κωδικού</string>
    <string name="linear_layout_add_message_messageID">Kωδικός Μηνύματος</string>
    <string name="linear_layout_add_message_Title">Τίτλος Κωδικού</string>
    <string name="linear_layout_add_message_add_btn">Προσθήκη Κωδικού</string>
    <string name="linear_layout_add_message_edit_btn">Προβολή - Επεξεργασία Μηνυμάτων</string>
    <string name="linear_layout_add_message_edittext_hint">Περιγραφή Κωδικού</string>
    <string name="edit_sms_info_title">Επεξεργασία - Προσθήκη Μηνύματος</string>
    <string name="edit_sms_info_intro">Προσθέστε κάποιον νέο κωδικό μετακίνησης ή επεξεργαστείτε τους ήδη υπάρχοντες.</string>
    <string name="edit_sms_info_ok_btn">Εντάξει</string>
    <string name="change_password_old_password">Παλιός Κωδικός</string>
    <string name="change_password_new_password1">Νέος Κωδικός</string>
    <string name="change_password_new_password2">Επιβεβαίωση Κωδικού</string>
    <string name="message_item_id">Id</string>
    <string name="message_item_title">Title</string>
    <string name="message_item_data">data</string>
    <string name="message_item_save_btn">Αποθήκευση</string>
    <string name="message_item_delete_btn">Διαγραφή</string>
    <string name="reset_password_email">Διεύθυνση Email</string>
    <string name="add_message_empty_fields">Συμπληρώστε όλα τα υποχρεωτικά πεδία!</string>
    <string name="AddMessage_database_success">Tο μήνυμα προστέθηκε με επιτυχία!</string>
    <string name="register_empty_email">Για να ολοκληρωθεί επιτυχώς η εγγραφή σας, πρέπει να συμπληρώσετε σωστά τη Διεύθυνση Email σας!</string>
    <string name="register_empty_name">Για να ολοκληρωθεί επιτυχώς η εγγραφή σας, πρέπει να συμπληρώσετε το Ονοματεπώνυμό σας!</string>
    <string name="register_empty_password">Για να ολοκληρωθεί επιτυχώς η εγγραφή σας, πρέπει να συμπληρώσετε τον κωδικό σας!</string>
    <string name="register_empty_address">Για να ολοκληρωθεί επιτυχώς η εγγραφή σας, πρέπει να συμπληρώσετε τη Διεύθυνσή σας!</string>
    <string name="register_success">Επιτυχής Εγγραφή!\nΓια να ολοκληρωθεί η διαδικασία παρακαλώ ελέγξτε το email σας</string>
    <string name="register">Δεν σας καταλάβαμε! Παρακαλώ προσπαθήστε ξανά</string>
    <string name="register_mic">Δεν σας καταλάβαμε! Παρακαλώ προσπαθήστε ξανά</string>
    <string name="user_profile_error1">Σφάλμα Σύνδεσης με τη Βάση!</string>
    <string name="user_profile_empty_name">Για να ολοκληρωθεί επιτυχώς η διαδικασία ενημέρωσης των στοιχείων σας, πρέπει να συμπληρώσετε το Ονομά σας!</string>
    <string name="user_profile_empty_address">Για να ολοκληρωθεί επιτυχώς η διαδικασία ενημέρωσης των στοιχείων σας, πρέπει να συμπληρώσετε τη Διεύθυνσή σας!</string>
    <string name="user_profile_success_update">Επιτυχής ενημέρωση των στοιχείων σας!</string>
    <string name="user_profile_error_update">Σφάλμα κατά τη διαδικασία ενημέρωση των στοιχείων σας!</string>
    <string name="user_profile_empty_fields">Παρακαλώ συμπληρώστε όλα τα πεδία!</string>
    <string name="user_profile_error_password_matching">Οι δύο κωδικοί δεν ταιριάζουν</string>
    <string name="user_profile_error_authentication">Σφάλμα ταυτοποίησης!</string>
    <string name="user_profile_success_password_change">Ο κωδικός σας άλλαξε επιτυχώς!</string>
    <string name="user_profile_mic_error">Δεν σας καταλάβαμε! Παρακαλώ προσπαθήστε ξανά</string>
    <string name="user_profile_mic_error_2">Δεν σας καταλάβαμε! Παρακαλώ προσπαθήστε ξανά</string>
    <string name="sendSMS_intro">"Καλώς ορίσατε, "</string>
    <string name="sendSMS_error_authentication">Σφάλμα Αποθήκευσης Τοποθεσίας!</string>
    <string name="sendSMS_loading_progressDialog">Παρακαλώ Περιμένετε...</string>
    <string name="sendSMS_snackbar_error_empty_reasonNumber">Επιλέξτε την αιτιολογία εξόδου σας!</string>
    <string name="sendSMS_mic_error1">Δεν σας καταλάβαμε! Παρακαλώ προσπαθήστε ξανά</string>
    <string name="sendSMS_mic_error2">Δεν σας καταλάβαμε! Παρακαλώ προσπαθήστε ξανά</string>
    <string name="sendSMS_send_success">Επιτυχής Αποστολή Μηνύματος!</string>
    <string name="sendSMS_error_no_location">Σφάλμα Τοποθεσίας</string>
    <string name="sendSMS_locationisDisabled_title">Η Τοποθεσία δεν είναι ενεργοποιημένη</string>
    <string name="sendSMS_locationisDisabled_message">Παρακαλώ ενεργοποιήστε την Τοποθεσία στις Ρυθμίσεις της συσκευής σας.</string>
    <string name="sendSMS_locationisDisabled_positive_btn">Ενεργοποίηση Τοποθεσίας</string>
    <string name="sendSMS_locationisDisabled_negative_btn">Ακύρωση</string>
    <string name="mainActivity_empty_email">Για να ολοκληρωθεί επιτυχώς η σύνδεση σας, πρέπει να συμπληρώσετε σωστά τη Διεύθυνση Email σας!</string>
    <string name="mainActivity_empty_password">Για να ολοκληρωθεί επιτυχώς η σύνδεση σας, πρέπει να συμπληρώσετε τον κωδικό σας!</string>
    <string name="mainActivity_success">Επιτυχής Σύνδεση!</string>
    <string name="mainActivity_password_reset">Επαναφορά Κωδικόυ Πρόσβασης</string>
    <string name="mainActivity_passwordreset_success">Ο κωδικός σας έχει σταλθεί στο E-mail!</string>
    <string name="mainActivity_passwordreset_empty_fields">Παρακαλώ συμπληρώστε όλα τα απαραίτητα πεδία!</string>
    <string name="mainActivity_mic1">Δεν σας καταλάβαμε! Παρακαλώ προσπαθήστε ξανά</string>
    <string name="mainActivity_mic2">Δεν σας καταλάβαμε! Παρακαλώ προσπαθήστε ξανά</string>
</resources>
