<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Messages.AddMessage">

    <EditText
        android:id="@+id/edittext_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:drawableStart="@android:drawable/sym_action_email"
        android:hint="@string/linear_layout_add_message_messageID"
        android:inputType="number" />


    <EditText
        android:id="@+id/edittext_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:drawableStart="@android:drawable/ic_menu_edit"
        android:hint="@string/linear_layout_add_message_Title" />


    <EditText
        android:id="@+id/edittext_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:drawableStart="@android:drawable/ic_menu_edit"
        android:hint="@string/linear_layout_add_message_edittext_hint" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add"
        android:layout_width="260dp"
        android:layout_height="59dp"
        android:text="@string/linear_layout_add_message_add_btn"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        app:icon="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toTopOf="@id/edittext_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_view"
        android:layout_width="260dp"
        android:layout_height="59dp"
        android:text="@string/linear_layout_add_message_edit_btn"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        app:icon="@android:drawable/ic_menu_view"
        app:layout_constraintBottom_toTopOf="@id/edittext_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</LinearLayout>