<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:editable="false"
        android:text="@string/view_edited_message_item_id"
        android:textColor="#000"
        android:textSize="18dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/viewedittext_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:editable="false"
        android:text="@string/view_edited_message_item_title"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/viewedittext_data2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:editable="false"
        android:text="@string/view_edited_message_item_data"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_send"
        android:layout_width="200dp"
        android:layout_height="59dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:text="@string/view_edited_message_item_send"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        app:icon="@android:drawable/ic_menu_send" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="#C5C5C5" />

</LinearLayout>