<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:textColor="#000"
        android:id="@+id/text_title"
        android:layout_margin="10dp"
        android:textSize="18dp"
        android:text="@string/message_item_id"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/message_item_title"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edittext_data2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/message_item_data"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_edit"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_weight="2"
            android:text="@string/message_item_save_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold"
            app:icon="@drawable/ic_outline_save"
            app:layout_constraintBottom_toTopOf="@id/edittext_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_weight="2"
            android:text="@string/message_item_delete_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold"
            app:icon="@android:drawable/ic_menu_delete"
            app:layout_constraintBottom_toTopOf="@id/edittext_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </LinearLayout>

    <View
        android:layout_margin="5dp"
        android:background="#C5C5C5"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

</LinearLayout>