<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/alert_no_corners"
    android:padding="16dp">


    <EditText
        android:id="@+id/changepassword_old"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changepassword_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:drawableStart="@android:drawable/ic_partial_secure"
        android:ems="10"
        android:hint="@string/change_password_old_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/changepassword_newpass"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changepassword_old"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:drawableStart="@android:drawable/ic_partial_secure"
        android:ems="10"
        android:hint="@string/change_password_new_password1"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/changepassword_newpass2"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changepassword_newpass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:drawableStart="@android:drawable/ic_partial_secure"
        android:ems="10"
        android:hint="@string/change_password_new_password2"
        android:inputType="none|textPassword"
        android:textAlignment="center"
        android:textSize="24dp"
        android:textStyle="bold" />

</RelativeLayout>