<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_no_corners">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/infoAlertTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/infoIntroText"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:text="@string/sms_reason_info_title"
            android:textAlignment="center"
            android:textColor="?colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/infoIntroText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/infoIntroLogo"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:drawableStart="@drawable/ic_round_info_green"
            android:gravity="center_horizontal"
            android:text="@string/sms_reason_info_title2"
            android:textAlignment="center"
            android:textColor="?colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/infoIntroLogo"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:drawableStart="@drawable/hardaliapp_logo"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="?colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/infoAlertName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/infoAlertTitle"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="-10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:text="@string/sms_reason_info_message_to_show"
            android:textAlignment="center"
            android:textSize="16sp" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/infoAlertButtonClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/infoAlertName"
            android:layout_alignParentEnd="false"
            android:layout_alignParentRight="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="135dp"
            android:layout_marginRight="135dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sms_reason_info_ok"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            app:backgroundTint="?colorPrimary"
            app:icon="@drawable/ic_round_check"
            app:iconTint="@android:color/white" />

    </RelativeLayout>


</RelativeLayout>