<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile">

    <TextView
        android:id="@+id/textViewPersonalElements2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="510dp"
        android:layout_marginEnd="5dp"
        android:gravity="center_horizontal"
        android:text="@string/activity_user_profile_intro"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/logo3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mic_user_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        android:background="@color/color_accent"
        android:backgroundTint="@color/color_primary"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/previewSMSfab"
        app:srcCompat="@drawable/ic_mic_white"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScroll="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?android:attr/windowBackground"
            android:foregroundTint="#0A776D"
            android:textAlignment="center"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="Δείτε το προφίλ σας παρακάτω!"
            app:titleTextColor="#0A776D" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/logo3"
        android:layout_width="190dp"
        android:layout_height="193dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appBarLayout"
        app:srcCompat="@drawable/hardaliapp_logo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonUpdatePersonalInfo"
        android:layout_width="159dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:onClick="update"
        android:text="@string/activity_user_profile_updatebtn"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="bold"
        app:icon="@drawable/ic_outline_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="385dp"
        android:layout_height="222dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo3">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            app:boxStrokeWidth="2dp"
            app:startIconDrawable="@drawable/ic_round_account_circle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_user_profile_fullname" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:boxStrokeWidth="2dp"
            app:startIconDrawable="@android:drawable/sym_action_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false"
                android:hint="@string/activity_user_profile_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutLocation"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:boxStrokeWidth="2dp"
            app:startIconDrawable="@drawable/ic_round_location">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputLocation"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:hint="@string/activity_user_profile_address"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_reset"
        android:layout_width="400dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="76dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonUpdatePersonalInfo">

        <TextView
            android:id="@+id/intro_forgetpassword2"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/activity_user_profile_changepassword_intro"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/goto_resetpass_lbl2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="changepassword"
            android:paddingLeft="0dp"
            android:text="@string/activity_user_profile_changepassword_intentbtn"
            android:textColor="@color/color_accent"
            android:textColorHighlight="@color/color_accent"
            android:textColorHint="@color/color_primary"
            android:textSize="15dp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>